--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -1130,7 +1130,7 @@ mob_db: (
 		BottleOfWater: 500
 		IceCube: 200
 		BookPage: 200
-		SilverMirror: 100
+		SilverMirror: 20
 		Diamond: 20
 	}
 },
@@ -7295,7 +7295,7 @@ mob_db: (
 		Sapphire: 20
 		CactusDrink: 500
 		IcedWater: 700
-		SilverMirror: 100
+		SilverMirror: 50
 		BookPage: 500
 	}
 },
@@ -8176,7 +8176,7 @@ mob_db: (
 		BugLeg: 2500
 		MaggotSlime: 2000
 		IronOre: 600
-		Coal: 500
+		Coal: 800
 		SilverOre: 100
 		TreasureKey: 800
 	}
@@ -8539,8 +8539,12 @@ mob_db: (
 	MutationCount: 4
 	MutationStrength: 20
 	Drops: {
-		RawLog: 1000
 		RawLog: 2000
+		RawLog: 2000
+		ReedBundle: 250
+		ReedBundle: 500
+		Root: 500
+		Root: 1000
 	}
 },
 {
@@ -8575,6 +8579,8 @@ mob_db: (
 	Drops: {
 		RawLog: 1000
 		RawLog: 2000
+		ReedBundle: 500
+		Root: 500
 	}
 },
 {
