Black Armors and stuff
- added Shadow Plant Crystal Dust
- added some black armors created through melting the steel and mixing it with the black crystals that can be extracted from a shadow plant
<br>
removed prsm aura here again to make a new mr with it

****

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -2141,6 +2141,25 @@ item_db: (
 	">
 },
 {
+	Id: 5323
+	AegisName: "BlackWarlordBoots"
+	Name: "BlackWarlordBoots"
+	Type: "IT_ARMOR"
+	Buy: 19000
+	Sell: 2000
+	Weight: 550
+	Matk: -22
+	Def: 5
+	Slots: 0
+	Loc: "EQP_SHOES"
+	Refine: false
+	ViewSprite: 5323
+	Script: <"
+		bonus bMatkRate, -22; // @EVOL2
+	">
+},
+/* Items */
+{
 	Id: 503
 	AegisName: "CasinoCoins"
 	Name: "CasinoCoins"
@@ -5453,6 +5472,27 @@ item_db: (
 		noselltonpc: true
 	}
 	//Disabled: true // @TMWA
+},
+{
+	Id: 5319
+	AegisName: "ShadowPlantCrystalDust"
+	Name: "ShadowPlantCrystalDust"
+	Type: "IT_ETC"
+	Buy: 0
+	Sell: 0
+	Weight: 1
+	Def: 0
+	Refine: false
+	ViewSprite: 5319
+	Trade: {
+		notrade: true
+		nodrop: true
+		nostorage: false
+		nogstorage: false
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	}
 },
 /* Chest Armor */
 {
@@ -10008,6 +10048,60 @@ item_db: (
 		bonus bMaxHP, 100;
 	">
 },
+{
+	Id: 5320
+	AegisName: "BlackChainmailShirt"
+	Name: "BlackChainmailShirt"
+	Type: "IT_ARMOR"
+	Buy: 15000
+	Sell: 1500
+	Weight: 800
+	Matk: -120
+	Def: 20
+	Slots: 0
+	Loc: "EQP_HEAD_MID"
+	Refine: false
+	ViewSprite: 5320
+	Script: <"
+		bonus bMatkRate, -120; // @EVOL2
+	">
+},
+{
+	Id: 5321
+	AegisName: "BlackLightPlatemail"
+	Name: "BlackLightPlatemail"
+	Type: "IT_ARMOR"
+	Buy: 50000
+	Sell: 2500
+	Weight: 1200
+	Matk: -150
+	Def: 25
+	Slots: 0
+	Loc: "EQP_HEAD_MID"
+	Refine: false
+	ViewSprite: 5321
+	Script: <"
+		bonus bMatkRate, -150; // @EVOL2
+	">
+},
+{
+	Id: 5322
+	AegisName: "BlackWarlordPlate"
+	Name: "BlackWarlordPlate"
+	Type: "IT_ARMOR"
+	Buy: 200000
+	Sell: 6000
+	Weight: 2600
+	Matk: -170
+	Def: 27
+	Slots: 0
+	Loc: "EQP_HEAD_MID"
+	Refine: false
+	ViewSprite: 5322
+	Script: <"
+		bonus bMatkRate, -170; // @EVOL2
+	">
+},
 //////////////////////////////////////////////////////////
 // Hats
 {
@@ -13896,6 +13990,60 @@ item_db: (
 		bonus bMdef, 15;
 		bonus bMaxHP, 50;
 		bonus bCriticalDef, 5;
+	">
+},
+{
+	Id: 5324
+	AegisName: "BlackWarlordHelmet"
+	Name: "BlackWarlordHelmet"
+	Type: "IT_ARMOR"
+	Buy: 30000
+	Sell: 3000
+	Weight: 900
+	Matk: -36
+	Def: 18
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5324
+	Script: <"
+		bonus bMatkRate, -36; // @EVOL2
+	">
+},
+{
+	Id: 5325
+	AegisName: "BlackInfantryHelmet"
+	Name: "BlackInfantryHelmet"
+	Type: "IT_ARMOR"
+	Buy: 15000
+	Sell: 1500
+	Weight: 400
+	Matk: -30
+	Def: 15
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5325
+	Script: <"
+		bonus bMatkRate, -30; // @EVOL2
+	">
+},
+{
+	Id: 5326
+	AegisName: "BlackCrusadeHelmet"
+	Name: "BlackCrusadeHelmet"
+	Type: "IT_ARMOR"
+	Buy: 25000
+	Sell: 2500
+	Weight: 1300
+	Matk: -36
+	Def: 18
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5326
+	Script: <"
+		bonus bMatkRate, -36; // @EVOL2
 	">
 },
 /* Usable items */
