mob drops add6 slimes bifs items

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -5455,7 +5455,6 @@ item_db: (
 	Def: 0
 	Refine: false
 	ViewSprite: 5314
-	//Disabled: true // @TMWA
 },
 {
 	Id: 5315
@@ -5490,7 +5489,6 @@ item_db: (
 	Def: 0
 	Refine: false
 	ViewSprite: 5316
-	//Disabled: true // @TMWA
 },
 {
 	Id: 5317
@@ -5534,7 +5532,6 @@ item_db: (
 		noauction: true
 		noselltonpc: true
 	}
-	//Disabled: true // @TMWA
 },
 {
 	Id: 5319
@@ -5547,6 +5544,39 @@ item_db: (
 	Def: 0
 	Refine: false
 	ViewSprite: 5319
+	Trade: {
+		notrade: true
+		nodrop: true
+		nostorage: false
+		nogstorage: false
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	}
+},
+{
+	Id: 5327
+	AegisName: "CopperOre"
+	Name: "CopperOre"
+	Type: "IT_ETC"
+	Buy: 3200
+	Sell: 1600
+	Weight: 40
+	Def: 0
+	Refine: false
+	ViewSprite: 5328
+},
+{
+	Id: 5328
+	AegisName: "CopperIngot"
+	Name: "CopperIngot"
+	Type: "IT_ETC"
+	Buy: 20000
+	Sell: 2200
+	Weight: 1000
+	Def: 0
+	Refine: false
+	ViewSprite: 5328
 	Trade: {
 		notrade: true
 		nodrop: true
@@ -15265,6 +15295,23 @@ item_db: (
 	">
 },
 {
+	Id: 1226
+	AegisName: "SilverBell"
+	Name: "SilverBell"
+	Type: "IT_USABLE"
+	Buy: 6000
+	Sell: 3000
+	Weight: 25
+	Def: 0
+	Slots: 0
+	Refine: false
+	ViewSprite: 1226
+	Script: <"
+		getitem SilverBell, 1;
+	">
+	// TODO: Make a quieter version of the ship's bell
+},
+{
 	Id: 1229
 	AegisName: "CaramelApple"
 	Name: "CaramelApple"
@@ -15892,7 +15939,42 @@ item_db: (
 		callfunc "itheal", 200, 50;
 	">
 },
-
+{
+	Id: 5329
+	AegisName: "IronShovel"
+	Name: "Iron Shovel"
+	Type: "IT_USABLE"
+	Buy: 5000
+	Sell: 750
+	Weight: 210
+	Refine: false
+	KeepAfterUse: true
+	Script: <"
+		if (@useType == 1) { //@EVOL2
+			doevent "Shovel::OnBury"; //@EVOL2
+		} else { //@EVOL2
+			doevent "Shovel::OnDig"; //@EVOL2
+		} //@EVOL2
+		//getitem IronShovel, 1; // @TMWA
+	">
+	// TODO: add keep after use flag to evolved.py and tmwa and replicate the 5 lines above
+},
+{
+	Id: 5330
+	AegisName: "ShadowScroll"
+	Name: "Shadow Scroll"
+	Type: "IT_USABLE"
+	Buy: 5000
+	Sell: 1000
+	Weight: 7
+	Script: <"
+		callfunc "learnskill", SKILL_MODRISHA; // @EVOL2
+		@skillId = SKILL_MODRISHA; // @EVOL2
+		@skillLv = 1; // @EVOL2
+		callfunc "SK_GrowPlants", false; // @EVOL2
+		//callfunc "UnreleasedScroll"; // @TMWA
+	">
+},
 /* Legs Armor */
 {
 	Id: 586
