--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -7340,9 +7340,10 @@ mob_db: (
 	MutationCount: 1
 	MutationStrength: 20
 	Drops: {
-		IronOre: 1500
 		TreasureKey: 1000
-		Coal: 300
+		Coal: 200
+		IronOre: 200
+		CopperOre: 400
 		SilverOre: 30
 		BromenalOre: 20
 		GoldOre: 10
@@ -7863,46 +7864,6 @@ mob_db: (
 	MutationStrength: 0
 	Drops: {
 		DarkCrystal: 10000
-	}
-},
-{
-	Id: 1172
-	SpriteName: "Bif"
-	Name: "Bif"
-	Lv: 1
-	Hp: 1
-	Sp: 0
-	Exp: 1
-	JExp: 1
-	AttackRange: 1
-	Attack: [0, 0]
-	Def: 1
-	Mdef: 0
-	CriticalDef: 0
-	Stats: {
-		Str: 0
-		Agi: 0
-		Vit: 0
-		Int: 0
-		Dex: 0
-		Luk: 0
-	}
-	ViewRange: 9
-	ChaseRange: 10
-	Size: 1
-	Race: 3
-	Element: (2, 1)
-	MoveSpeed: 800
-	AttackDelay: 800
-	AttackMotion: 672
-	DamageMotion: 480
-	Drops: {
-		IronPowder: 1200
-		IronOre: 800
-		Coal: 1000
-		SilverOre: 150
-		BromenalOre: 100
-		GoldOre: 50
 	}
 },
 {
@@ -9095,6 +9056,1219 @@ mob_db: (
 		CasinoCoins: 250
 		CasinoCoins: 250
 		HMCPirateHat: 2
+	}
+},
+{
+	Id: 1199
+	SpriteName: "SilverSlime"
+	Name: "Silver Slime"
+	Lv: 40
+	Hp: 600
+	Sp: 0
+	Exp: 200
+	JExp: 18
+	AttackRange: 1
+	Attack: [60, 90]
+	Def: 20
+	Mdef: 30
+	CriticalDef: 0
+	Stats: {
+		Str: 20
+		Agi: 30
+		Vit: 10
+		Int: 10
+		Dex: 30
+		Luk: 30
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 0
+	Element: (1, 1)
+	Mode: {
+		CanMove: true
+		Looter: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 1200
+	AttackDelay: 1872
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 1
+	MutationStrength: 20
+	Drops: {
+		SilverArrow: 1000
+		SilverArrow: 1000
+		SilverBell: 1
+		Coal: 200
+		IronOre: 200
+		CopperOre: 40
+		SilverOre: 300
+		SilverOre: 150
+		BromenalOre: 20
+		GoldOre: 10
+	}
+},
+{
+	Id: 1200
+	SpriteName: "BromenalSlime"
+	Name: "Bromenal Slime"
+	Lv: 40
+	Hp: 600
+	Sp: 0
+	Exp: 200
+	JExp: 18
+	AttackRange: 1
+	Attack: [60, 90]
+	Def: 20
+	Mdef: 30
+	CriticalDef: 0
+	Stats: {
+		Str: 20
+		Agi: 30
+		Vit: 10
+		Int: 10
+		Dex: 30
+		Luk: 30
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 0
+	Element: (1, 1)
+	Mode: {
+		CanMove: true
+		Looter: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 1200
+	AttackDelay: 1872
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 1
+	MutationStrength: 20
+	Drops: {
+		BromenalBoots: (10, "ODG_BASICSTAT")
+		BromenalGloves: (10, "ODG_BASICSTAT")
+		BromenalLegs: (10, "ODG_BASICSTAT")
+		Coal: 200
+		IronOre: 200
+		CopperOre: 40
+		SilverOre: 30
+		BromenalOre: 200
+		BromenalOre: 100
+		GoldOre: 10
+	}
+},
+{
+	Id: 1201
+	SpriteName: "GoldSlime"
+	Name: "Gold Slime"
+	Lv: 40
+	Hp: 600
+	Sp: 0
+	Exp: 200
+	JExp: 18
+	AttackRange: 1
+	Attack: [60, 90]
+	Def: 20
+	Mdef: 30
+	CriticalDef: 0
+	Stats: {
+		Str: 20
+		Agi: 30
+		Vit: 10
+		Int: 10
+		Dex: 30
+		Luk: 30
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 0
+	Element: (1, 1)
+	Mode: {
+		CanMove: true
+		Looter: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 1200
+	AttackDelay: 1872
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 1
+	MutationStrength: 20
+	Drops: {
+		GoldenDeliciousApple: 11
+		Coal: 200
+		IronOre: 200
+		CopperOre: 40
+		SilverOre: 30
+		BromenalOre: 20
+		GoldOre: 100
+		GoldOre: 50
+	}
+},
+{
+	Id: 1202
+	SpriteName: "IronSlime"
+	Name: "Iron Slime"
+	Lv: 40
+	Hp: 600
+	Sp: 0
+	Exp: 200
+	JExp: 18
+	AttackRange: 1
+	Attack: [60, 90]
+	Def: 20
+	Mdef: 30
+	CriticalDef: 0
+	Stats: {
+		Str: 20
+		Agi: 30
+		Vit: 10
+		Int: 10
+		Dex: 30
+		Luk: 30
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 0
+	Element: (1, 1)
+	Mode: {
+		CanMove: true
+		Looter: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 1200
+	AttackDelay: 1872
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 1
+	MutationStrength: 20
+	Drops: {
+		IronArrow: 5000
+		IronArrow: 2500
+		IronShovel: 1
+		Coal: 200
+		IronOre: 2000
+		IronOre: 1000
+		CopperOre: 40
+		SilverOre: 30
+		BromenalOre: 20
+		GoldOre: 10
+	}
+},
+{
+	Id: 1203
+	SpriteName: "CoalSlime"
+	Name: "Coal Slime"
+	Lv: 40
+	Hp: 600
+	Sp: 0
+	Exp: 200
+	JExp: 18
+	AttackRange: 1
+	Attack: [60, 90]
+	Def: 20
+	Mdef: 30
+	CriticalDef: 0
+	Stats: {
+		Str: 20
+		Agi: 30
+		Vit: 10
+		Int: 10
+		Dex: 30
+		Luk: 30
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 0
+	Element: (1, 1)
+	Mode: {
+		CanMove: true
+		Looter: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 1200
+	AttackDelay: 1872
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 1
+	MutationStrength: 20
+	Drops: {
+		Charcoal: 1000
+		Charcoal: 500
+		Charcoal: 250
+		Coal: 2000
+		Coal: 1000
+		IronOre: 200
+		CopperOre: 40
+		SilverOre: 30
+		BromenalOre: 20
+		GoldOre: 10
+	}
+},
+{
+	Id: 1172
+	SpriteName: "Bif"
+	Name: "Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		IronPowder: 1200
+		IronOre: 800
+		Coal: 1000
+        CopperOre: 200
+		SilverOre: 150
+		BromenalOre: 100
+		GoldOre: 50
+	}
+},
+{
+	Id: 1204
+	SpriteName: "BigBif"
+	Name: "Big Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		IronPowder: 2400
+		IronOre: 1600
+		Coal: 2000
+        CopperOre: 400
+		SilverOre: 300
+		BromenalOre: 200
+		GoldOre: 100
+	}
+},
+{
+	Id: 1205
+	SpriteName: "SmallBif"
+	Name: "Small Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		IronPowder: 600
+		IronOre: 400
+		Coal: 500
+		CopperOre: 100
+		SilverOre: 75
+		BromenalOre: 50
+		GoldOre: 25
+	}
+},
+{
+	Id: 1206
+	SpriteName: "AmethystBif"
+	Name: "Amethyst Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Amethyst: 20
+		AmethystPowder: 1200
+		AmethystPowder: 1200
+		DiamondPowder: 600
+		EmeraldPowder: 600
+		RubyPowder: 600
+		SapphirePowder: 600
+		TopazPowder: 600
+		Coal: 250
+	}
+},
+{
+	Id: 1207
+	SpriteName: "DiamondBif"
+	Name: "Diamond Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Diamond: 20
+		AmethystPowder: 600
+		DiamondPowder: 1200
+		DiamondPowder: 1200
+		EmeraldPowder: 600
+		RubyPowder: 600
+		SapphirePowder: 600
+		TopazPowder: 600
+		Coal: 250
+	}
+},
+{
+	Id: 1208
+	SpriteName: "EmeraldBif"
+	Name: "Emerald Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Emerald: 20
+		AmethystPowder: 600
+		DiamondPowder: 600
+		EmeraldPowder: 1200
+		EmeraldPowder: 1200
+		RubyPowder: 600
+		SapphirePowder: 600
+		TopazPowder: 600
+		Coal: 250
+	}
+},
+{
+	Id: 1209
+	SpriteName: "RubyBif"
+	Name: "Ruby Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Ruby: 20
+		AmethystPowder: 600
+		DiamondPowder: 600
+		EmeraldPowder: 600
+		RubyPowder: 1200
+		RubyPowder: 1200
+		SapphirePowder: 600
+		TopazPowder: 600
+		Coal: 250
+	}
+},
+{
+	Id: 1210
+	SpriteName: "SapphireBif"
+	Name: "Sapphire Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Sapphire: 20
+		AmethystPowder: 600
+		DiamondPowder: 600
+		EmeraldPowder: 600
+		RubyPowder: 600
+		SapphirePowder: 1200
+		SapphirePowder: 1200
+		TopazPowder: 600
+		Coal: 250
+	}
+},
+{
+	Id: 1211
+	SpriteName: "TopazBif"
+	Name: "Topaz Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Topaz: 20
+		AmethystPowder: 600
+		DiamondPowder: 600
+		EmeraldPowder: 600
+		RubyPowder: 600
+		SapphirePowder: 600
+		TopazPowder: 1200
+		TopazPowder: 1200
+		Coal: 250
+	}
+},
+{
+	Id: 1212
+	SpriteName: "BigAmethystBif"
+	Name: "Big Amethyst Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Amethyst: 30
+		AmethystPowder: 1200
+		AmethystPowder: 1200
+		AmethystPowder: 1200
+		DiamondPowder: 600
+		EmeraldPowder: 600
+		RubyPowder: 600
+		SapphirePowder: 600
+		TopazPowder: 600
+		Coal: 300
+	}
+},
+{
+	Id: 1213
+	SpriteName: "BigDiamondBif"
+	Name: "Big Diamond Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Diamond: 30
+		AmethystPowder: 600
+		DiamondPowder: 1200
+		DiamondPowder: 1200
+		DiamondPowder: 1200
+		EmeraldPowder: 600
+		RubyPowder: 600
+		SapphirePowder: 600
+		TopazPowder: 600
+		Coal: 300
+	}
+},
+{
+	Id: 1214
+	SpriteName: "BigEmeraldBif"
+	Name: "Big Emerald Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Emerald: 30
+		AmethystPowder: 600
+		DiamondPowder: 600
+		EmeraldPowder: 1200
+		EmeraldPowder: 1200
+		EmeraldPowder: 1200
+		RubyPowder: 600
+		SapphirePowder: 600
+		TopazPowder: 600
+		Coal: 300
+	}
+},
+{
+	Id: 1215
+	SpriteName: "BigRubyBif"
+	Name: "Big Ruby Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Ruby: 30
+		AmethystPowder: 600
+		DiamondPowder: 600
+		EmeraldPowder: 600
+		RubyPowder: 1200
+		RubyPowder: 1200
+		RubyPowder: 1200
+		SapphirePowder: 600
+		TopazPowder: 600
+		Coal: 300
+	}
+},
+{
+	Id: 1216
+	SpriteName: "BigSapphireBif"
+	Name: "Big Sapphire Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Sapphire: 30
+		AmethystPowder: 600
+		DiamondPowder: 600
+		EmeraldPowder: 600
+		RubyPowder: 600
+		SapphirePowder: 1200
+		SapphirePowder: 1200
+		SapphirePowder: 1200
+		TopazPowder: 600
+		Coal: 300
+	}
+},
+{
+	Id: 1217
+	SpriteName: "BigTopazBif"
+	Name: "Big Topaz Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Topaz: 30
+		AmethystPowder: 600
+		DiamondPowder: 600
+		EmeraldPowder: 600
+		RubyPowder: 600
+		SapphirePowder: 600
+		TopazPowder: 1200
+		TopazPowder: 1200
+		TopazPowder: 1200
+		Coal: 300
+	}
+},
+{
+	Id: 1218
+	SpriteName: "SmallAmethystBif"
+	Name: "Small Amethyst Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Amethyst: 10
+		AmethystPowder: 1200
+		DiamondPowder: 600
+		EmeraldPowder: 600
+		RubyPowder: 600
+		SapphirePowder: 600
+		TopazPowder: 600
+		Coal: 200
+	}
+},
+{
+	Id: 1219
+	SpriteName: "SmallDiamondBif"
+	Name: "Small Diamond Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Diamond: 10
+		AmethystPowder: 600
+		DiamondPowder: 1200
+		EmeraldPowder: 600
+		RubyPowder: 600
+		SapphirePowder: 600
+		TopazPowder: 600
+		Coal: 200
+	}
+},
+{
+	Id: 1220
+	SpriteName: "SmallEmeraldBif"
+	Name: "Small Emerald Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Emerald: 10
+		AmethystPowder: 600
+		DiamondPowder: 600
+		EmeraldPowder: 1200
+		RubyPowder: 600
+		SapphirePowder: 600
+		TopazPowder: 600
+		Coal: 200
+	}
+},
+{
+	Id: 1221
+	SpriteName: "SmallRubyBif"
+	Name: "Small Ruby Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Ruby: 10
+		AmethystPowder: 600
+		DiamondPowder: 600
+		EmeraldPowder: 600
+		RubyPowder: 1200
+		SapphirePowder: 600
+		TopazPowder: 600
+		Coal: 200
+	}
+},
+{
+	Id: 1222
+	SpriteName: "SmallSapphireBif"
+	Name: "Small Sapphire Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Sapphire: 10
+		AmethystPowder: 600
+		DiamondPowder: 600
+		EmeraldPowder: 600
+		RubyPowder: 600
+		SapphirePowder: 1200
+		TopazPowder: 600
+		Coal: 200
+	}
+},
+{
+	Id: 1223
+	SpriteName: "SmallTopazBif"
+	Name: "Small Topaz Bif"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Topaz: 10
+		AmethystPowder: 600
+		DiamondPowder: 600
+		EmeraldPowder: 600
+		RubyPowder: 600
+		SapphirePowder: 600
+		TopazPowder: 1200
+		Coal: 200
+	}
+},
+{
+	Id: 1224
+	SpriteName: "CoalGolem"
+	Name: "Coal Golem"
+	Lv: 180
+	Hp: 25000
+	Sp: 280
+	Exp: 68000
+	JExp: 2200
+	AttackRange: 3
+	Attack: [170, 190]
+	Def: 75
+	Mdef: 40
+	CriticalDef: 0
+	Stats: {
+		Str: 35
+		Agi: 26
+		Vit: 99
+		Int: 127
+		Dex: 255
+		Luk: 105
+	}
+	ViewRange: 31
+	ChaseRange: 30
+	Size: 1
+	Race: 0
+	Element: (6, 4)
+	Mode: {
+		CanMove: true
+		Looter: true
+		Assist: true
+		Boss: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 320
+	AttackDelay: 1000
+	AttackMotion: 672
+	DamageMotion: 50
+	MutationCount: 0
+	MutationStrength: 0
+	Drops: {
+		Charcoal: 1000
+		Charcoal: 500
+		Charcoal: 250
+		Coal: 5000
+		Coal: 2500
+		Coal: 1250
+		IronOre: 500
+		IronPowder: 1200
 	}
 },
 )
