drops and mobpt

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -148,6 +148,7 @@ mob_db: (
 		Dagger: 70
 		SharpKnife: 10
 		PileOfAsh: 500
+		SulphurPowder: 250
 		BromenalDroplet: 20
 	}
 },
@@ -1359,6 +1360,7 @@ mob_db: (
 		Dagger: 70
 		SharpKnife: 10
 		PileOfAsh: 500
+		SulphurPowder: 250
 		BromenalDroplet: 30
 	}
 },
@@ -1797,6 +1799,7 @@ mob_db: (
 	MutationStrength: 30
 	Drops: {
 		PileOfAsh: 5000
+		SulphurPowder: 500
 		DarkCrystal: 1000
 		Skull: 500
 		GoldenTooth: 10
