disable some without quest

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -5553,6 +5553,7 @@ item_db: (
 		noauction: true
 		noselltonpc: true
 	}
+	//Disabled: true // @TMWA
 },
 {
 	Id: 5327
@@ -5586,6 +5587,7 @@ item_db: (
 		noauction: true
 		noselltonpc: true
 	}
+	//Disabled: true // @TMWA
 },
 /* Chest Armor */
 {
