Allow setting stats at start of game - server

--- a/world/conf/char_athena.conf
+++ b/world/conf/char_athena.conf
@@ -44,18 +44,18 @@ min_name_length: 4
 // set to 1 if you want to limit accounts to 1 character
 char_slots: 9
 
-// max hair style and hair color
+// max hair style and hair color at start
 max_hair_style: 1
 max_hair_color: 1
 
-// the minimum value for stats (str, agi, ...)
+// the minimum value for stats on creation (str, agi, ...)
 min_stat_value: 1
 
-// the maximum value for stats (str, agi, ...)
-max_stat_value: 1
+// the maximum value for stats on creation (str, agi, ...)
+max_stat_value: 10
 
-// the sum of all stats combined (str + agi + int + ...)
-total_stat_sum: 6
+// the sum of all stats combined on creation (str + agi + int + ...)
+total_stat_sum: 30
 
 // Filename of the file which receives the online players list in text
 online_txt_filename: online.txt
