silver bell sound

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -15309,9 +15309,8 @@ item_db: (
 	Refine: false
 	ViewSprite: 1226
 	Script: <"
-		getitem SilverBell, 1;
+		callfunc "SilverBellSound";
 	">
-	// TODO: Make a quieter version of the ship's bell
 },
 {
 	Id: 1229
