--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -60,6 +60,7 @@ npc: npc/items/nobow_item.txt
 npc: npc/items/love_potion.txt
 npc: npc/items/manapearl_item.txt
 npc: npc/items/underworld_troll.txt
+npc: npc/items/silver_bell.txt
 
 // Mob Functions
 npc: npc/mobs/mob_points.txt
