keep after use field to items that use it

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -14993,6 +14993,7 @@ item_db: (
 	Slots: 0
 	Refine: false
 	ViewSprite: 808
+	KeepAfterUse: true
 	Script: <"
 		set @warpTowelName$, "HitchhikersTowel";
 		callfunc "WarpTowel";
@@ -15010,6 +15011,7 @@ item_db: (
 	Slots: 0
 	Refine: false
 	ViewSprite: 809
+	KeepAfterUse: true
 	Script: <"
 		set @warpTowelName$, "WhiteHitchhikersTowel";
 		callfunc "WarpTowel";
@@ -15027,6 +15029,7 @@ item_db: (
 	Slots: 0
 	Refine: false
 	ViewSprite: 810
+	KeepAfterUse: true
 	Script: <"
 		set @warpTowelName$, "RedHitchhikersTowel";
 		callfunc "WarpTowel";
@@ -15044,6 +15047,7 @@ item_db: (
 	Slots: 0
 	Refine: false
 	ViewSprite: 811
+	KeepAfterUse: true
 	Script: <"
 		set @warpTowelName$, "GreenHitchhikersTowel";
 		callfunc "WarpTowel";
@@ -15061,6 +15065,7 @@ item_db: (
 	Slots: 0
 	Refine: false
 	ViewSprite: 812
+	KeepAfterUse: true
 	Script: <"
 		set @warpTowelName$, "BlueHitchhikersTowel";
 		callfunc "WarpTowel";
@@ -15078,6 +15083,7 @@ item_db: (
 	Slots: 0
 	Refine: false
 	ViewSprite: 813
+	KeepAfterUse: true
 	Script: <"
 		set @warpTowelName$, "YellowHitchhikersTowel";
 		callfunc "WarpTowel";
@@ -15095,6 +15101,7 @@ item_db: (
 	Slots: 0
 	Refine: false
 	ViewSprite: 814
+	KeepAfterUse: true
 	Script: <"
 		set @warpTowelName$, "PurpleHitchhikersTowel";
 		callfunc "WarpTowel";
@@ -15112,6 +15119,7 @@ item_db: (
 	Slots: 0
 	Refine: false
 	ViewSprite: 815
+	KeepAfterUse: true
 	Script: <"
 		set @warpTowelName$, "OrangeHitchhikersTowel";
 		callfunc "WarpTowel";
@@ -15129,6 +15137,7 @@ item_db: (
 	Slots: 0
 	Refine: false
 	ViewSprite: 816
+	KeepAfterUse: true
 	Script: <"
 		set @warpTowelName$, "PinkHitchhikersTowel";
 		callfunc "WarpTowel";
@@ -15146,6 +15155,7 @@ item_db: (
 	Slots: 0
 	Refine: false
 	ViewSprite: 817
+	KeepAfterUse: true
 	Script: <"
 		set @warpTowelName$, "TealHitchhikersTowel";
 		callfunc "WarpTowel";
@@ -15163,6 +15173,7 @@ item_db: (
 	Slots: 0
 	Refine: false
 	ViewSprite: 818
+	KeepAfterUse: true
 	Script: <"
 		set @warpTowelName$, "LimeHitchhikersTowel";
 		callfunc "WarpTowel";
@@ -15308,6 +15319,7 @@ item_db: (
 	Slots: 0
 	Refine: false
 	ViewSprite: 1226
+	KeepAfterUse: true
 	Script: <"
 		callfunc "SilverBellSound";
 	">
@@ -15485,6 +15497,7 @@ item_db: (
 	Slots: 0
 	Refine: false
 	ViewSprite: 1280
+	KeepAfterUse: true
 	Script: <"
 		callfunc "useScissors";
 	">
@@ -15517,6 +15530,7 @@ item_db: (
 	Slots: 0
 	Refine: false
 	ViewSprite: 3001
+	KeepAfterUse: true
 	Script: <"
 		callfunc "rubberBat";
 	">
