drops and chances

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -3774,7 +3774,7 @@ mob_db: (
 	AttackMotion: 672
 	DamageMotion: 50
 	Drops: {
-		Tomato: 1
+		Coal: 10000
 	}
 },
 {
@@ -5554,6 +5554,7 @@ mob_db: (
 		Skull: 300
 		DiseasedHeart: 250
 		IronPowder: 100
+		SulphurPowder: 50
 		EnlighteningElixir: 1200
 		GoldenTooth: 20
 		WitchHat: (1, "ODG_BASICSTAT")
@@ -7347,6 +7348,7 @@ mob_db: (
 		Coal: 200
 		IronOre: 200
 		CopperOre: 400
+		CopperOre: 200
 		SilverOre: 30
 		BromenalOre: 20
 		GoldOre: 10
@@ -9264,6 +9266,7 @@ mob_db: (
 		IronShovel: 1
 		Coal: 200
 		IronOre: 2000
+		IronOre: 1000
 		CopperOre: 40
 		SilverOre: 30
 		BromenalOre: 20
