Naphtalene to Yellow Apple

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -5289,18 +5289,6 @@ item_db: (
 	}
 },
 {
-	Id: 5288
-	AegisName: "Naftalin"
-	Name: "Naphthalene"
-	Type: "IT_ETC"
-	Buy: 0
-	Sell: 0
-	Weight: 1
-	Def: 0
-	Refine: false
-	ViewSprite: 5288
-},
-{
 	Id: 5292
 	AegisName: "SilverOre"
 	Name: "Silver Ore"
@@ -5588,6 +5576,18 @@ item_db: (
 		noselltonpc: true
 	}
 	//Disabled: true // @TMWA
+},
+{
+	Id: 5331
+	AegisName: "Naftalin"
+	Name: "Naphthalene"
+	Type: "IT_ETC"
+	Buy: 500
+	Sell: 200
+	Weight: 10
+	Def: 0
+	Refine: false
+	ViewSprite: 5331
 },
 /* Chest Armor */
 {
@@ -15884,6 +15884,22 @@ item_db: (
 	ViewSprite: 657
 	Script: <"
 		callfunc "itheal", 200, 5;
+	">
+},
+{
+	Id: 5288
+	AegisName: "YellowApple"
+	Name: "YellowApple"
+	Type: "IT_USABLE"
+	Buy: 30
+	Sell: 7
+	Weight: 10
+	Def: 0
+	Slots: 0
+	Refine: false
+	ViewSprite: 5288
+	Script: <"
+		callfunc "itheal", 55, 0;
 	">
 },
 {
