--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -5759,6 +5759,7 @@ mob_db: (
 	MutationCount: 1
 	MutationStrength: 20
 	Drops: {
+		YellowApple: 750
 		OrangeCupcake: 200
 		CherryCake: 100
 		CactusDrink: 350
