--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -5289,6 +5289,18 @@ item_db: (
 	}
 },
 {
+	Id: 5288
+	AegisName: "Naftalin"
+	Name: "Naphthalene"
+	Type: "IT_ETC"
+	Buy: 500
+	Sell: 200
+	Weight: 10
+	Def: 0
+	Refine: false
+	ViewSprite: 5288
+},
+{
 	Id: 5292
 	AegisName: "SilverOre"
 	Name: "Silver Ore"
@@ -5578,16 +5590,16 @@ item_db: (
 	//Disabled: true // @TMWA
 },
 {
-	Id: 5331
-	AegisName: "Naftalin"
-	Name: "Naphthalene"
+	Id: 5332
+	AegisName: "Charcoal"
+	Name: "Charcoal"
 	Type: "IT_ETC"
 	Buy: 500
 	Sell: 200
 	Weight: 10
 	Def: 0
 	Refine: false
-	ViewSprite: 5331
+	ViewSprite: 5332
 },
 /* Chest Armor */
 {
@@ -14680,15 +14692,15 @@ item_db: (
 	AegisName: "GreenApple"
 	Name: "GreenApple"
 	Type: "IT_USABLE"
-	Buy: 20
-	Sell: 5
+	Buy: 25
+	Sell: 6
 	Weight: 5
 	Def: 0
 	Slots: 0
 	Refine: false
 	ViewSprite: 719
 	Script: <"
-		callfunc "itheal", 45, 0;
+		callfunc "itheal", 50, 0;
 	">
 },
 {
@@ -15887,22 +15899,6 @@ item_db: (
 	">
 },
 {
-	Id: 5288
-	AegisName: "YellowApple"
-	Name: "YellowApple"
-	Type: "IT_USABLE"
-	Buy: 30
-	Sell: 7
-	Weight: 10
-	Def: 0
-	Slots: 0
-	Refine: false
-	ViewSprite: 5288
-	Script: <"
-		callfunc "itheal", 55, 0;
-	">
-},
-{
 	Id: 5294
 	AegisName: "CrazyRum"
 	Name: "Crazy Rum"
@@ -15923,6 +15919,7 @@ item_db: (
 		//callfunc("SC_Bonus", 60000, SC_PHYS_SHIELD, 40); //@TMWA
 		//misceffect FX_MAGIC_SHIELD, strcharinfo(0); //@TMWA
 	">
+	// TODO: betsanc of Crazy Rum can be chanceled with detsanc so add SC_PHYS_SHIELD_ITEM to prevent this
 },
 {
 	Id: 5309
@@ -16004,6 +16001,22 @@ item_db: (
 		@skillLv = 1; // @EVOL2
 		callfunc "SK_GrowPlants", false; // @EVOL2
 		//callfunc "UnreleasedScroll"; // @TMWA
+	">
+},
+{
+	Id: 5331
+	AegisName: "YellowApple"
+	Name: "YellowApple"
+	Type: "IT_USABLE"
+	Buy: 25
+	Sell: 6
+	Weight: 5
+	Def: 0
+	Slots: 0
+	Refine: false
+	ViewSprite: 5331
+	Script: <"
+		callfunc "itheal", 50, 0;
 	">
 },
 /* Legs Armor */
