Floyd received an upgrade from Angus

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -7659,23 +7659,23 @@ mob_db: (
 	Id: 1168
 	SpriteName: "Floyd"
 	Name: "Floyd"
-	Lv: 20
-	Hp: 150
+	Lv: 40
+	Hp: 1500
 	Sp: 0
-	Exp: 27
-	JExp: 3
+	Exp: 555
+	JExp: 150
 	AttackRange: 3
-	Attack: [5, 25]
-	Def: 0
+	Attack: [25, 50]
+	Def: 60
 	Mdef: 5
-	CriticalDef: 0
+	CriticalDef: 30
 	Stats: {
-		Str: 1
-		Agi: 1
-		Vit: 1
-		Int: 0
-		Dex: 20
-		Luk: 25
+		Str: 10
+		Agi: 23
+		Vit: 30
+		Int: 20
+		Dex: 40
+		Luk: 50
 	}
 	ViewRange: 9
 	ChaseRange: 10
@@ -7689,21 +7689,21 @@ mob_db: (
 		ChangeTargetChase: true
 	}
 	MoveSpeed: 800
-	AttackDelay: 1872
+	AttackDelay: 1975
 	AttackMotion: 672
 	DamageMotion: 480
 	MutationCount: 3
 	MutationStrength: 40
 	Drops: {
-		PurplePresentBox: 1000
-		MaggotSlime: 800
-		BluePresentBox: 500
-		CactusDrink: 150
-		BugLeg: 400
-		RoastedMaggot: 150
+		BentNeedle: 10
 		Dagger: 70
-		SharpKnife: 1
-		IronIngot: 5
+		FlawedLens: 5
+		IronArrow: 150
+		IronArrow: 800
+		IronIngot: 20
+		IronPowder: 500
+		IronPowder: 1000
+		SilverArrow: 150
 	}
 },
 {
