GM Amulet for events - server

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -1551,6 +1551,35 @@ item_db: (
 	">
 },
 {
+	Id: 908
+	AegisName: "GMAmulet"
+	Name: "GMAmulet"
+	Type: "IT_ARMOR"
+	Buy: 1000
+	Sell: 1
+	Weight: 1
+	Def: 50
+	Matk: 20
+	Slots: 0
+	Loc: "EQP_ARMOR"
+	Refine: false
+	ViewSprite: 908
+	Nouse: {
+		override: 50
+	}
+	Script: <"
+		bonus bMaxHP, 31000;
+		bonus bHPrecovRate, 200;
+		bonus bCriticalDef, 50;
+		bonus bMdef, 50;
+		bonus bFlee, 20;
+		bonus bMatkRate, 20; // @EVOL2
+		bonus bHit, 50;
+		bonus bCritical, 50;
+		bonus bAspdRate, 20;
+	">
+},
+{
 	Id: 1227
 	AegisName: "EnchantersAmulet"
 	Name: "EnchantersAmulet"
