--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -1580,6 +1580,23 @@ item_db: (
 	">
 },
 {
+	Id: 909
+	AegisName: "LeprechaunHead"
+	Name: "LeprechaunHead"
+	Type: "IT_ARMOR"
+	Buy: 10000
+	Sell: 5000
+	Weight: 100
+	Def: 10
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 909
+	Script: <"
+		bonus bLuk, 3;
+	">
+},
+{
 	Id: 1227
 	AegisName: "EnchantersAmulet"
 	Name: "EnchantersAmulet"
