--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -3423,7 +3423,7 @@ mob_db: (
 {
 	Id: 1138
 	SpriteName: "ManaGuard"
-	Name: "ManaGuardian"
+	Name: "Mana Guardian"
 	Lv: 180
 	Hp: 20000
 	Sp: 280
@@ -3598,7 +3598,7 @@ mob_db: (
 {
 	Id: 1142
 	SpriteName: "Kage"
-	Name: "ZaxDeKagen"
+	Name: "Zax DeKagen"
 	Lv: 200
 	Hp: 29999
 	Sp: 280
@@ -3683,7 +3683,7 @@ mob_db: (
 {
 	Id: 1144
 	SpriteName: "Dragon"
-	Name: "GreatDragon"
+	Name: "Great Dragon"
 	Lv: 250
 	Hp: 29999
 	Sp: 280
@@ -4825,7 +4825,7 @@ mob_db: (
 {
 	Id: 1059
 	SpriteName: "GCMaggot"
-	Name: "GiantCaveMaggot"
+	Name: "Giant Cave Maggot"
 	Lv: 90
 	Hp: 2000
 	Sp: 0
@@ -7984,7 +7984,7 @@ mob_db: (
 {
 	Id: 1175
 	SpriteName: "MegaManaBug"
-	Name: "MegaManaBug"
+	Name: "Mega Mana Bug"
 	Lv: 111
 	Hp: 675
 	Sp: 0
@@ -8617,7 +8617,7 @@ mob_db: (
 {
 	Id: 1188
 	SpriteName: "Junglefowl"
-	Name: "Junglefowl"
+	Name: "Jungle Fowl"
 	Lv: 125
 	Hp: 25500
 	Exp: 15000
@@ -8890,5 +8890,44 @@ mob_db: (
 	AttackDelay: 2100
 	AttackMotion: 672
 	DamageMotion: 200
+},
+{
+	Id: 1195
+	SpriteName: "Brainblow"
+	Name: "Brainblow"
+	Lv: 77
+	Hp: 7
+	Sp: 0
+	Exp: 100
+	JExp: 50
+	AttackRange: 1
+	Attack: [100, 100]
+	Def: 0
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 1
+		Agi: 77
+		Vit: 1
+		Int: 1
+		Dex: 77
+		Luk: 77
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 0
+	Element: (7, 2)
+	Mode: {
+		CanMove: true
+		Aggressive: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 77
+	AttackDelay: 2000
+	AttackMotion: 672
+	DamageMotion: 0
 },
 )
