--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -1597,6 +1597,23 @@ item_db: (
 	">
 },
 {
+	Id: 910
+	AegisName: "Rainerang"
+	Name: "Rainerang"
+	Type: "IT_WEAPON"
+	Buy: 10000
+	Sell: 5000
+	Weight: 115
+	Atk: 60
+	Range: 4
+	Slots: 1
+	WeaponLv: 1
+	Loc: "EQP_HAND_R"
+	Refine: false
+	ViewSprite: 910
+	Subtype: "W_1HAXE"
+},
+{
 	Id: 1227
 	AegisName: "EnchantersAmulet"
 	Name: "EnchantersAmulet"
