Rick Lime - server

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -8928,6 +8928,57 @@ mob_db: (
 	MoveSpeed: 77
 	AttackDelay: 2000
 	AttackMotion: 672
-	DamageMotion: 0
+	DamageMotion: 200
+},
+{
+	Id: 1196
+	SpriteName: "RickLime"
+	Name: "Rick Lime"
+	Lv: 120
+	Hp: 54321
+	Sp: 0
+	Exp: 100001
+	JExp: 777
+	AttackRange: 7
+	Attack: [123, 321]
+	Def: 11
+	Mdef: 33
+	CriticalDef: 22
+	Stats: {
+		Str: 30
+		Agi: 99
+		Vit: 80
+		Int: 33
+		Dex: 123
+		Luk: 123
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 1
+	Element: (7, 3)
+	Mode: {
+		CanMove: true
+		Aggressive: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 120
+	AttackDelay: 321
+	AttackMotion: 672
+	DamageMotion: 200
+	Drops: {
+		CoinBag: 500
+		CoinBag: 500
+		CoinBag: 500
+		CoinBag: 1000
+		CoinBag: 2000
+		FourLeafClover: 5
+		FourLeafClover: 5
+		LeprechaunHat: 10
+		LeprechaunHead: 5
+		Rainerang: 5
+	}
 },
 )
