Revert "Flintlock - server"
This reverts commit 9d40ee0c0cf6c39014a0703b554ae2e48a8ee9ef.


(cherry picked from commit 2ea0a331a277941fb1d67466b0719f79f7813fa7)

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -1357,8 +1357,8 @@ item_db: (
 },
 {
 	Id: 5284
-	AegisName: "Flintlock"
-	Name: "Flintlock Pistol"
+	AegisName: "Revolver"
+	Name: "Revolver"
 	Type: "IT_WEAPON"
 	Buy: 150000
 	Sell: 500
